tests/test_proof/good/dates_simple.catala_en
## Test

```catala
declaration scope A:
  internal x content date
  output y content boolean

scope A:
  definition x equals |2022-01-16|
  definition y under condition x < |2010-01-01| consequence equals true
  definition y under condition x >= |2010-01-01| and x < |2015-01-01| consequence equals false
  definition y under condition x >= |2015-01-01| and x < |2020-01-01| consequence equals true
  definition y under condition x >= |2020-01-01| consequence equals false
```



```catala-test-inline
$ catala Typecheck --check-invariants
[RESULT] Invariant typing_defaults checked. result: [46/46]
[RESULT] Invariant match_inversion checked. result: [0/0]
[RESULT] Invariant app_inversion checked. result: [0/0]
[RESULT] Invariant no_return_a_function checked. result: [0/0]
[RESULT] Invariant no_partial_evaluation checked. result: [0/0]
[RESULT] Invariant default_no_arrow checked. result: [7/7]
[RESULT] Typechecking successful!
```

```catala-test-inline
$ catala Proof --disable-counterexamples
[RESULT] No errors found during the proof mode run.
```
